<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">乐享周边</string>
    <string name="user_name">手机号</string>
    <string name="user_password">密码</string>
    <string name="remember_password">记住密码</string>
    <string name="auto_sign_in">自动登录</string>
    <string name="sign_in">登陆</string>
    <string name="register_user">注册账号</string>
    <string name="register_user_name">请输入手机号</string>
    <string name="register_user_password">不少于6位</string>
    <string name="had_read_xy">我已同意</string>
    <string name="user_xy">用户协议</string>
    <string name="register_in">注册</string>
    <string name="actionbar_back">返回</string>
    <string name="ershou">二手买卖</string>
    <string name="pinche">拼车</string>
    <string name="xinxianshi">新鲜事</string>
    <string name="wenda">问答</string>
    <string name="my_center">个人中心</string>
    <string name="es_zhuangrang">转让</string>
    <string name="es_qiugou">求购</string>

    <string name="submit">提交</string>

    <string name="es_add_zr">我要转让</string>
    <string name="es_add_qg">我要求购</string>
    <string name="es_zr_title_hint">宝贝标题</string>
    <string name="es_zr_content_hint">简单介绍宝贝的入手时间、使用方式、转让原因等</string>
    <string name="es_zr_nowprice_lable">转让价：￥</string>
    <string name="es_zr_oldprice_lable">原价：￥</string>
    <string name="es_zr_fenlei_lable">分类</string>
    <string name="es_zr_xinjiu_lable">新旧程度</string>
    <string name="es_zr_jiaohuan_lable">支持物物交换</string>
    <string name="es_zr_actionbar_title">我要转让</string>

    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开刷新数据...</string>
    <string name="pull_to_refresh_refreshing_label">正在加载...</string>
    <string name="pull_to_refresh_tap_label">点击刷新...</string>
</resources>
