<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical">
    <ImageView
            android:id="@+id/background_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-150dp"
            android:contentDescription="@null"
            android:scaleType="fitXY"
            android:src="@drawable/head_bg2" />
    <com.derder.zhoubian.widget.PullScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            >
        <!--这个的作用就是控制ScrollView下面只能有一个子元素-->
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                android:orientation="vertical">
            <Button
                    android:id="@+id/my_center_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_center"
                    android:minHeight="44dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:background="@drawable/common_btn"
                    android:textColor="@color/white"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="140dp"
                    android:layout_marginRight="8dp"
                    />
            <!--这个的作用使遮罩能显示一部分背景-->
            <LinearLayout
                    android:id="@+id/scroll_view_head"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="200dp"
                    android:background="@color/transparent"
                    android:orientation="vertical">
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:layout_weight="1"
                        android:baselineAligned="false"
                        android:background="@color/white"
                        android:id="@+id/index_line1">
                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">
                        <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:padding="8dp"
                                android:clickable="true"
                                android:background="@drawable/menu_btn_blue2"
                                android:id="@+id/ershou_icon">
                            <ImageView android:layout_width="match_parent"
                                       android:layout_height="match_parent"
                                       android:src="@drawable/sale"
                                       android:contentDescription="@null"/>
                        </LinearLayout>
                        <TextView android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:text="@string/ershou"/>
                    </LinearLayout>
                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">
                        <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:padding="8dp"
                                android:clickable="true"
                                android:background="@drawable/menu_btn_green">
                            <ImageView android:layout_width="match_parent"
                                       android:layout_height="match_parent"
                                       android:src="@drawable/car"
                                       android:contentDescription="@null"/>
                        </LinearLayout>
                        <TextView android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:text="@string/pinche"/>
                    </LinearLayout>
                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">
                        <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:padding="8dp"
                                android:clickable="true"
                                android:background="@drawable/menu_btn_zi">
                            <ImageView android:layout_width="match_parent"
                                       android:layout_height="match_parent"
                                       android:src="@drawable/news"
                                       android:contentDescription="@null"/>
                        </LinearLayout>
                        <TextView android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:text="@string/xinxianshi"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:layout_weight="1"
                        android:baselineAligned="false"
                        android:background="@color/white"
                        android:id="@+id/index_line2">
                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">
                        <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:padding="8dp"
                                android:clickable="true"
                                android:background="@drawable/menu_btn_orange">
                            <ImageView android:layout_width="match_parent"
                                       android:layout_height="match_parent"
                                       android:src="@drawable/ask"
                                       android:contentDescription="@null"/>
                        </LinearLayout>
                        <TextView android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:text="@string/wenda"/>
                    </LinearLayout>
                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:id="@null">

                    </LinearLayout>
                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:id="@null">

                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:layout_weight="1"
                        android:baselineAligned="false"
                        android:background="@color/white"
                        android:id="@+id/index_line3">

                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </com.derder.zhoubian.widget.PullScrollView>
</RelativeLayout>